ansible/roles/gw_iptables/files/inetRouter_iptables
##Правила для реализации  port knocking. Постучаться нужно на 3 порта 8088 7077 9099
## последовательность 8088 -> 7077 -> 9099
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TRAFFIC - [0:0]
:SSH-INPUT - [0:0]
:SSH-INPUTTWO - [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT  -m conntrack --ctstate NEW -m tcp -p tcp --source 10.0.2.2 --dport 22 -j ACCEPT
-A INPUT -j TRAFFIC
-A TRAFFIC -p icmp --icmp-type any -j ACCEPT
-A TRAFFIC -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 -j ACCEPT
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp -m recent --name SSH2 --remove -j DROP
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp --dport 9099 -m recent --rcheck --name SSH1 -j SSH-INPUTTWO
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp -m recent --name SSH1 --remove -j DROP
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp --dport 7077 -m recent --rcheck --name SSH0 -j SSH-INPUT
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp -m recent --name SSH0 --remove -j DROP
-A TRAFFIC -m conntrack --ctstate NEW -m tcp -p tcp --dport 8088 -m recent --name SSH0 --set -j DROP
-A SSH-INPUT -m recent --name SSH1 --set -j DROP
-A SSH-INPUTTWO -m recent --name SSH2 --set -j DROP
-A TRAFFIC -j DROP
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

-A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
COMMIT
